--- a/rand-col-addEventListener.html
+++ b/rand-col-addEventListener.html
@@ -19,10 +19,12 @@
         return Math.floor(Math.random() * (number+1));
       }
 
-      btn.addEventListener('click', () => {
-        const rndCol = `rgb(${random(255)}, ${random(255)}, ${random(255)})`;
+	    function chgBg() {
+	      const rndCol = `rgb(${random(255)}, ${random(255)}, ${random(255)})`;
         document.body.style.backgroundColor = rndCol;
-      });
+	    }
+
+      btn.addEventListener('click', chgBg);
     </script>
   </body>
 </html>
